--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,6 +20,7 @@
     <title>Login</title>
   </head>
   <body>
+    <div id="particles-js"></div>
     <main class="login-design">
       <div class="login">
         <div class="login-data">
@@ -50,7 +51,7 @@
               <br>
               <div class="footer">
                 <div class="check_r" id="check_r">
-                  <input type="checkbox" id="remember"><label for="remember"> Recordarme</label>
+                  <input type="checkbox" id="remember"><label class="remember" for="remember"> Recordarme</label>
                 </div>
                 <input type="button" value="Ingresar" class="btn-login"/>
               </div>
@@ -59,7 +60,9 @@
         </div>
       </div>
     </main>
+    <script src="resources/particles.js"></script>
     <script src="resources/index_login.js"></script>
     <script src="resources/validar.js"></script>
+    
   </body>
 </html>
