--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,7 +27,7 @@
           <h1>Bienvenido</h1>
           <img src="resources/Assets/GG-corto.png" alt="" height="10%" width="10%" class="logo"/>
 
-          <form action=none class="form-login">
+          <form action="/auth" method="post" class="form-login">
             <div class="login-form">
               <div class="input-group">
                   <label class="input-fill">
