Pagina-Web_Gary-Goodsped
Massive changes

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="resources/css/main.css">
     <link rel="stylesheet" href="resources/css/normalize.css" />
     <title>Login</title>
+    <link rel="icon" href="resources/Assets/GG-corto.ico" class="rel">
   </head>
   <body>
     <div id="particles-js"></div>
