--- a/views/Homee.ejs
+++ b/views/Homee.ejs
@@ -23,7 +23,7 @@
               <a href="#" class="nav-menu-link nav-link">Inicio</a>
             </li>
             <li class="nav-menu-item">
-              <a href="#" class="nav-menu-link nav-link">Autogestión</a>
+              <a href="/" class="nav-menu-link nav-link">Autogestión</a>
             </li>
             <li class="nav-menu-item">
               <a href="#" class="nav-menu-link nav-link">Sobre nosotros</a>
@@ -45,10 +45,19 @@
         <img class="img-book" src="resources/Assets/libro.png" alt="Student">
     </section>
     <section id="sec2">
-        <h2>b</h2>
+      <div class="titlesec2">
+        <h2 class="new">Novedades</h2>
+      </div>
+      <div class="slider">
+        <div class="slider-title">
+          <h3>Titulo</h3>
+        </div>
+      </div>
     </section>
     <section id="sec3">
-        <h3>c</h3>
+      <div class="titlesec3">
+        <h3>Sobre Nosotros</h3>
+      </div>
     </section>
     
 </body>
