--- a/views/Homee.ejs
+++ b/views/Homee.ejs
@@ -45,10 +45,18 @@
         <img class="img-book" src="resources/Assets/libro.png" alt="Student">
     </section>
     <section id="sec2">
-        <h2>b</h2>
+      <div class="titlesec2">
+        <h2>Novedades</h2>
+      </div>
+      <div class="slider">
+        <h3 class="Slider-text">Calendario</h3>
+        <b>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium similique dolore ullam maxime a, earum animi quibusdam excepturi suscipit neque et? Animi eaque qui quos! Tenetur delectus doloremque rem impedit?</b>
+      </div>
     </section>
     <section id="sec3">
-        <h3>c</h3>
+      <div class="titlesec3">
+        <h4>Sobre Nosotros</h4>
+      </div>
     </section>
     
 </body>
