Pagina-Web_Gary-Goodsped-V2.5.0
Modeling of the home page.

--- a/views/Homee.ejs
+++ b/views/Homee.ejs
@@ -44,6 +44,8 @@
         </div>
         <img class="img-book" src="resources/Assets/libro.png" alt="Student">
     </section>
+
+    
     <section id="sec2">
       <div class="titlesec2">
         <h2 class="new">Novedades</h2>
@@ -52,18 +54,55 @@
         <div class="slider-title">
           <h3>Titulo</h3>
         </div>
-        <h2>Novedades</h2>
-      </div>
-      <div class="slider">
-        <h3 class="Slider-text">Calendario</h3>
-        <b>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium similique dolore ullam maxime a, earum animi quibusdam excepturi suscipit neque et? Animi eaque qui quos! Tenetur delectus doloremque rem impedit?</b>
+        <div class="container-slider">
+          <div class="slider" id="slider">
+            <div class="slider__section">
+              <img src="#" alt="" class="slider__img">
+            </div>
+            <div class="slider__section">
+              <img src="#" alt="" class="slider__img">
+            </div>
+            <div class="slider__section">
+              <img src="#" alt="" class="slider__img">
+            </div>
+          </div>
+          <div class="slider_btn slider_btn_right">&#60;</div>
+          <div class="slider_btn slider_btn_left">&#62;</div>
+        </div>
       </div>
     </section>
+
+
     <section id="sec3">
       <div class="titlesec3">
-        <h3>Sobre Nosotros</h3>
         <h4>Sobre Nosotros</h4>
       </div>
+      <div class="content">
+        <div class="cont-left">
+          <h5>Contactanos:</h5>
+          <p>
+            Tel: 03516603455 <br>
+            Instagram <br>
+            FaceBook <br>
+            Gmail:</p>
+
+        </div>
+        <div class="cont-center">
+          <h6>Ubicación</h6>
+          <p>
+            5186 - Alta Gracia, Córdoba, Argentina <br>
+            Urquiza 309 esq. Arz Castellanos
+          </p>
+        </div>
+        <div class="cont-right">
+          <p>
+            Relleno 1 <br>
+            Relleno 2
+          </p>
+        </div>
+      </div>
+      <div class="separator"> </div>
+      <p>Desarrolladores: <b>Miotti Ayrton</b> y <b>Nieto Facundo</b></p>
     </section>
     
 </body>
