--- a/public/css/style-home.css
+++ b/public/css/style-home.css
@@ -127,48 +127,88 @@ h1{
 h2{
   display: inline-block;
   margin: 0;
-  position: relative;
 }
 
-.new::before{
-  content: "";
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  width: 0;
-  height: 2px;
-  background-color: rgb(0, 255, 0);
-  transition: width 1s ease-out;
-}
-
-.new:hover::before{
-  width: 100%;
-  left: 0;
-  right: auto;
-}
-
-#sec3{
-  background-color: var(--sec3-bg);
-  height: 100vh; 
-=======
-  text-align: center;
-  padding-top: 30px;
-}
-  
-h2{
-  margin: 0;
-  padding-top: 15px;
-  color: #fff;
-  font-size: 40px;
+/* --------- - Slider - --------- */
+.container-slider{
+  width: 80%;
+  overflow: hidden;
 }
 
 .slider{
-  align-items: center;
-  text-align: center;
-  
+  display: flex;
+  width: 100%; /*Depende cant. Imágenes*/
 }
 
-   #sec3{
-    background-color: var(--sec3-bg);
-     height: 100vh; 
+.slider__section{
+  width: 100%;
+}
+
+.slider__img{
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.slider__btn{
+  color: white;
+}
+
+.slider__btn:hover{
+  color: white;
+}
+/* --------- - Fin Sl -  --------- */
+
+#sec3{
+  background-color: var(--sec3-bg);
+  height: 90vh; 
+  text-align: center;
+  padding-top: 30px;
+  color: var(--colorText);
+  align-items: center;
+}
+
+h4{
+  padding-top: 60px;
+  font-size: 30px;
+}
+
+.content{
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: space-between;
+  width: 80%;
+  margin: auto;
+}
+
+.cont-left{
+  padding-left: 20px;
+  font-size: 20px;
+}
+
+h5{
+  font-size: 20px;
+}
+
+.cont-center{
+  font-size: 20px;
+}
+
+h6{
+  font-size: 20px;
+  margin-top: 0;
+}
+
+.cont-right{
+  padding-right: 40px;
+  font-size: 20px;
+}
+
+.separator{
+  background-color: #fff;
+  height: 2px;
+  width: 80%;
+  padding: 0;
+  margin: 20px auto 0 auto;
 }
