--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,6 +23,7 @@ body {
   font-family: sans-serif;
   padding: 90px 20px 0;
   background-color: var(--bg-color);
+  margin-left: var(--width-collapsed);
 }
 
 .body-expanded{
