--- a/views/student_home.ejs
+++ b/views/student_home.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+DOCTYPE html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
@@ -21,7 +21,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
 
   </head>
-  <body>
+  <body class="hidden">
     <header class="header">
       <nav class="nav">
         <a href="#" class="logo nav-link">
@@ -129,24 +129,164 @@
       </div>
     </div>
     <!- Fin Menú Lateral Desplegable ->
+
     <div class="animation1">
-      <div class="cont-pizarra">
-        <img src="resources/Assets/pizarra.png" alt="Pizarra" class="pizarra">
-        <span id="lbl">BIENVENIDO PROFESOR</span>
-        <br>
-        <span id="lbl_usr">Nom_USer</span>
+      <div class="box">
+        <div class="lightbar">
+        </div>
+        <h2>Bienvenido usr</h2>
       </div>
     </div>
+    
     <div class="animation2">
-      <span>boenasss</span>
+      <table>
+        <thead>
+          <tr>
+            <td>Materias</td>
+            <td colspan="4">PRIMER TRIMESTRE</td>
+            <td colspan="4">SEGUNDO TRIMESTRE</td>
+            <td colspan="4">TERCER TRIMESTRE</td>
+            <td>PROMEDIO</td>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>FAT</td>
+            <td>6</td>
+            <td>7</td>
+            <td>7</td>
+            <td>8</td>
+            <td>8</td>
+            <td>7</td>
+            <td>6</td>
+            <td>7</td>
+            <td>9</td>
+            <td>9</td>
+            <td>9</td>
+            <td>9</td>
+            <td>7,7</td>
+          </tr>
+          <tr>
+            <td>Ingles</td>
+            <td>9</td>
+            <td>10</td>
+            <td>8</td>
+            <td>9</td>
+            <td>8</td>
+            <td>7</td>
+            <td>9</td>
+            <td>8</td>
+            <td>8</td>
+            <td>10</td>
+            <td>9</td>
+            <td>9</td>
+            <td>8,7</td>
+          </tr>
+          <tr>
+            <td>Marco Juridico</td>
+            <td>5</td>
+            <td>8</td>
+            <td>8</td>
+            <td>7</td>
+            <td>5</td>
+            <td>5</td>
+            <td>5</td>
+            <td>5</td>
+            <td>7</td>
+            <td>7</td>
+            <td>7</td>
+            <td>7</td>
+            <td>6,3</td>
+          </tr>
+          <tr>
+            <td>Lab de Informatica</td>
+            <td>4</td>
+            <td>4</td>
+            <td>7</td>
+            <td>5</td>
+            <td>6</td>
+            <td>5</td>
+            <td>7</td>
+            <td>6</td>
+            <td>7</td>
+            <td>7</td>
+            <td>7</td>
+            <td>7</td>
+            <td>6</td>
+          </tr>
+          <tr>
+            <td>Base de Datos</td>
+            <td>4</td>
+            <td>3</td>
+            <td>8</td>
+            <td>5</td>
+            <td>5</td>
+            <td>5</td>
+            <td>5</td>
+            <td>5</td>
+            <td>5</td>
+            <td>5</td>
+            <td>5</td>
+            <td>5</td>
+            <td>5</td>
+          </tr>
+          <tr>
+            <td>Ap a las Nuevas Tec</td>
+            <td>7</td>
+            <td>7</td>
+            <td>7</td>
+            <td>7</td>
+            <td>7</td>
+            <td>8</td>
+            <td>6</td>
+            <td>7</td>
+            <td>8</td>
+            <td>8</td>
+            <td>8</td>
+            <td>8</td>
+            <td>7,3</td>
+          </tr>
+          <tr>
+            <td>HyS</td>
+            <td>10</td>
+            <td>10</td>
+            <td>10</td>
+            <td>10</td>
+            <td>10</td>
+            <td>10</td>
+            <td>10</td>
+            <td>10</td>
+            <td>10</td>
+            <td>10</td>
+            <td>10</td>
+            <td>10</td>
+            <td>10</td>
+          </tr>
+          <tr>
+            <td>Emprendimietos</td>
+            <td>8</td>
+            <td>8</td>
+            <td>8</td>
+            <td>8</td>
+            <td>8</td>
+            <td>8</td>
+            <td>8</td>
+            <td>8</td>
+            <td>8</td>
+            <td>8</td>
+            <td>8</td>
+            <td>8</td>
+            <td>8</td>
+          </tr>
+        </tbody>
+      
+      </table>
     </div>
-
-
 
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js">
     
   </script>
-  <script src="resources/main.js"></script>
+  <script src="resources/masin.js"></script>
   </body>
 </html>
