--- a/public/css/style.css
+++ b/public/css/style.css
@@ -331,14 +331,6 @@ body {
 
 
 /*ESTILOS DEL CUERPO*/
-.cont-pizarra{
-  margin:0 40%;
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .animation1{
   overflow: hidden;
   height: 100vh;
@@ -371,31 +363,70 @@ body {
                 0px 0px 120px var(--neon-color);
 }
 
-.pizarra{
-  width: 500px;
-  height: 500px;
+.lightbar{
+  position: absolute;
+  top: 0;
+  left: 15%;
+  width: 10px;
+  height: 100%;
+  border-radius: 10px;
+  background: #fff;
+  z-index: 2;
+  box-shadow: 0px 0px 10px var(--neon-color),
+  0px 0px 20px var(--neon-color),
+  0px 0px 40px var(--neon-color),
+  0px 0px 80px var(--neon-color),
+  0px 0px 120px var(--neon-color);
+  animation: animatelightbar 2.4s linear infinite;
 }
 
-#lbl{
-  display: flex;
-  font-family: 'Special Elite', cursive;
-  font-style: normal;
-  line-height: 88px;
-  font-size: 40px;
-  position: absolute;
-  top:37%;
-  margin: auto;
+@keyframes animatelightbar{
+  0%, 5%
+  {
+    transform: scaleY(0) translateX(0);
+  }
+  10%
+  {
+    transform: scaleY(1) translateX(0);
+  }
+  90%
+  {
+    transform: scaleY(1) translateX(calc(900px - 10px));
+  }
+  95%, 100%
+  {
+    transform: scaleY(1) translateX(calc(900px - 10px));
+  }
 }
 
-#lbl_usr{
-  display: flex;
-  font-family: 'Special Elite', cursive;
-  font-style: normal;
-  line-height: 88px;
-  font-size: 30px;
+.topLayer{
   position: absolute;
-  top:40% ;
-  margin: 30px;
+  top: 0;
+  left: 15%;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  background: var(--bg-color);
+  animation: animatetopLayer 2.4s linear;
+}
+
+@keyframes animatetopLayer{
+  0%, 5%
+  {
+    transform: translateX(0);
+  }
+  10%
+  {
+    transform: scaleY(1) translateX(0);
+  }
+  90%
+  {
+    transform: scaleY(1) translateX(calc(900px - 10px));
+  }
+  95%, 100%
+  {
+    transform: scaleY(1) translateX(calc(900px - 10px));
+  }
 }
 
 .hidden{
@@ -404,8 +435,16 @@ body {
 .animation2{
   overflow: hidden;
 }
-/*LEvantar el welcome y edspues poner el nombre de usuario*/
 
+.ShSec1, .ShSec2, .ShSec3{
+  overflow: hidden;
+  height: 100vh;
+}
+
+.ShSec1{
+  padding-left: 5%;
+  margin-top: 12%;
+}
 
 /*Libreta de Alumnos*/
 
