--- a/views/home.ejs
+++ b/views/home.ejs
@@ -116,11 +116,12 @@
     </div>
     <!- Fin Menú Lateral Desplegable ->
     <div class="animation1">
-      <div class="cont-pizarra">
-        <img src="resources/Assets/pizarra.png" alt="Pizarra" class="pizarra">
-        <span id="lbl">BIENVENIDO PROFESOR</span>
-        <br>
-        <span id="lbl_usr">Nom_USer</span>
+      <div class="box">
+        <div class="lightbar"></div>
+        <div class="topLayer"></div>
+        <% if(login) { %>
+          <h2 id="TextW">Bienvenido <%= name %></h2>
+          <% } %>
       </div>
     </div>
     <div class="animation2">
