--- a/views/student_home.ejs
+++ b/views/student_home.ejs
@@ -50,6 +50,7 @@ DOCTYPE html>
     </header>
     <!- Fin del Header ->
 
+    <!- Menú Lateral Desplegable ->
     <div id="sidemenu" class="menu-collapsed">
       <!- Header ->
       <div id="header">
@@ -77,12 +78,12 @@ DOCTYPE html>
       <!- ITEMS ->
       <div id="menu-items">
         <div class="item">
-          <a href="#">
+          <a href="#ShSec1">
             <div class="icon first-icon">
               <img src="resources/Assets/matters.png" alt="Materias">
             </div>
             <div class="title">
-              <span>Materias</span>
+              <span>Libreta</span>
             </div>
           </a>
         </div>
@@ -90,12 +91,12 @@ DOCTYPE html>
         <div class="item separator"></div>
 
         <div class="item">
-          <a href="">
+          <a href="#ShSec2">
             <div class="icon">
               <img src="resources/Assets/matters.png" alt="">
             </div>
             <div class="title">
-              <span>Nombre del icono</span>
+              <span>Calificaciones</span>
             </div>
           </a>
         </div>
@@ -132,161 +133,167 @@ DOCTYPE html>
 
     <div class="animation1">
       <div class="box">
-        <div class="lightbar">
-        </div>
-        <h2>Bienvenido usr</h2>
+        <div class="lightbar"></div>
+        <div class="topLayer"></div>
+        <% if(login) { %>
+          <h2 id="TextW">Bienvenido <%= name %></h2>
+          <% } %>
       </div>
     </div>
     
-    <div class="animation2">
-      <table>
-        <thead>
-          <tr>
-            <td>Materias</td>
-            <td colspan="4">PRIMER TRIMESTRE</td>
-            <td colspan="4">SEGUNDO TRIMESTRE</td>
-            <td colspan="4">TERCER TRIMESTRE</td>
-            <td>PROMEDIO</td>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>FAT</td>
-            <td>6</td>
-            <td>7</td>
-            <td>7</td>
-            <td>8</td>
-            <td>8</td>
-            <td>7</td>
-            <td>6</td>
-            <td>7</td>
-            <td>9</td>
-            <td>9</td>
-            <td>9</td>
-            <td>9</td>
-            <td>7,7</td>
-          </tr>
-          <tr>
-            <td>Ingles</td>
-            <td>9</td>
-            <td>10</td>
-            <td>8</td>
-            <td>9</td>
-            <td>8</td>
-            <td>7</td>
-            <td>9</td>
-            <td>8</td>
-            <td>8</td>
-            <td>10</td>
-            <td>9</td>
-            <td>9</td>
-            <td>8,7</td>
-          </tr>
-          <tr>
-            <td>Marco Juridico</td>
-            <td>5</td>
-            <td>8</td>
-            <td>8</td>
-            <td>7</td>
-            <td>5</td>
-            <td>5</td>
-            <td>5</td>
-            <td>5</td>
-            <td>7</td>
-            <td>7</td>
-            <td>7</td>
-            <td>7</td>
-            <td>6,3</td>
-          </tr>
-          <tr>
-            <td>Lab de Informatica</td>
-            <td>4</td>
-            <td>4</td>
-            <td>7</td>
-            <td>5</td>
-            <td>6</td>
-            <td>5</td>
-            <td>7</td>
-            <td>6</td>
-            <td>7</td>
-            <td>7</td>
-            <td>7</td>
-            <td>7</td>
-            <td>6</td>
-          </tr>
-          <tr>
-            <td>Base de Datos</td>
-            <td>4</td>
-            <td>3</td>
-            <td>8</td>
-            <td>5</td>
-            <td>5</td>
-            <td>5</td>
-            <td>5</td>
-            <td>5</td>
-            <td>5</td>
-            <td>5</td>
-            <td>5</td>
-            <td>5</td>
-            <td>5</td>
-          </tr>
-          <tr>
-            <td>Ap a las Nuevas Tec</td>
-            <td>7</td>
-            <td>7</td>
-            <td>7</td>
-            <td>7</td>
-            <td>7</td>
-            <td>8</td>
-            <td>6</td>
-            <td>7</td>
-            <td>8</td>
-            <td>8</td>
-            <td>8</td>
-            <td>8</td>
-            <td>7,3</td>
-          </tr>
-          <tr>
-            <td>HyS</td>
-            <td>10</td>
-            <td>10</td>
-            <td>10</td>
-            <td>10</td>
-            <td>10</td>
-            <td>10</td>
-            <td>10</td>
-            <td>10</td>
-            <td>10</td>
-            <td>10</td>
-            <td>10</td>
-            <td>10</td>
-            <td>10</td>
-          </tr>
-          <tr>
-            <td>Emprendimietos</td>
-            <td>8</td>
-            <td>8</td>
-            <td>8</td>
-            <td>8</td>
-            <td>8</td>
-            <td>8</td>
-            <td>8</td>
-            <td>8</td>
-            <td>8</td>
-            <td>8</td>
-            <td>8</td>
-            <td>8</td>
-            <td>8</td>
-          </tr>
-        </tbody>
-      
-      </table>
-    </div>
+    <section id="ShSec1" class="ShSec1">
+      <div class="animation2">
+        <table>
+          <thead>
+            <tr>
+              <td>Materias</td>
+              <td colspan="4">PRIMER TRIMESTRE</td>
+              <td colspan="4">SEGUNDO TRIMESTRE</td>
+              <td colspan="4">TERCER TRIMESTRE</td>
+              <td>PROMEDIO</td>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>FAT</td>
+              <td>6</td>
+              <td>7</td>
+              <td>7</td>
+              <td>8</td>
+              <td>8</td>
+              <td>7</td>
+              <td>6</td>
+              <td>7</td>
+              <td>9</td>
+              <td>9</td>
+              <td>9</td>
+              <td>9</td>
+              <td>7,7</td>
+            </tr>
+            <tr>
+              <td>Ingles</td>
+              <td>9</td>
+              <td>10</td>
+              <td>8</td>
+              <td>9</td>
+              <td>8</td>
+              <td>7</td>
+              <td>9</td>
+              <td>8</td>
+              <td>8</td>
+              <td>10</td>
+              <td>9</td>
+              <td>9</td>
+              <td>8,7</td>
+            </tr>
+            <tr>
+              <td>Marco Juridico</td>
+              <td>5</td>
+              <td>8</td>
+              <td>8</td>
+              <td>7</td>
+              <td>5</td>
+              <td>5</td>
+              <td>5</td>
+              <td>5</td>
+              <td>7</td>
+              <td>7</td>
+              <td>7</td>
+              <td>7</td>
+              <td>6,3</td>
+            </tr>
+            <tr>
+              <td>Lab de Informatica</td>
+              <td>4</td>
+              <td>4</td>
+              <td>7</td>
+              <td>5</td>
+              <td>6</td>
+              <td>5</td>
+              <td>7</td>
+              <td>6</td>
+              <td>7</td>
+              <td>7</td>
+              <td>7</td>
+              <td>7</td>
+              <td>6</td>
+            </tr>
+            <tr>
+              <td>Base de Datos</td>
+              <td>4</td>
+              <td>3</td>
+              <td>8</td>
+              <td>5</td>
+              <td>5</td>
+              <td>5</td>
+              <td>5</td>
+              <td>5</td>
+              <td>5</td>
+              <td>5</td>
+              <td>5</td>
+              <td>5</td>
+              <td>5</td>
+            </tr>
+            <tr>
+              <td>Ap a las Nuevas Tec</td>
+              <td>7</td>
+              <td>7</td>
+              <td>7</td>
+              <td>7</td>
+              <td>7</td>
+              <td>8</td>
+              <td>6</td>
+              <td>7</td>
+              <td>8</td>
+              <td>8</td>
+              <td>8</td>
+              <td>8</td>
+              <td>7,3</td>
+            </tr>
+            <tr>
+              <td>HyS</td>
+              <td>10</td>
+              <td>10</td>
+              <td>10</td>
+              <td>10</td>
+              <td>10</td>
+              <td>10</td>
+              <td>10</td>
+              <td>10</td>
+              <td>10</td>
+              <td>10</td>
+              <td>10</td>
+              <td>10</td>
+              <td>10</td>
+            </tr>
+            <tr>
+              <td>Emprendimietos</td>
+              <td>8</td>
+              <td>8</td>
+              <td>8</td>
+              <td>8</td>
+              <td>8</td>
+              <td>8</td>
+              <td>8</td>
+              <td>8</td>
+              <td>8</td>
+              <td>8</td>
+              <td>8</td>
+              <td>8</td>
+              <td>8</td>
+            </tr>
+          </tbody>
+        
+        </table>
+      </div>
+    </section>
 
+    <section id="ShSec2" class="ShSec2"></section>
+    <section id="ShSec3" class="ShSec3"></section>
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js">
     
   </script>
-  <script src="resources/masin.js"></script>
+  <script src="resources/main.js"></script>
   </body>
 </html>
