--- a/views/teacher_home.ejs
+++ b/views/teacher_home.ejs
@@ -77,7 +77,7 @@
       <!- ITEMS ->
       <div id="menu-items">
         <div class="item">
-          <a href="#">
+          <a href="homee">
             <div class="icon first-icon">
               <img src="resources/Assets/trabajo-en-equipo.png" alt="Profesores">
             </div>
@@ -116,11 +116,12 @@
     </div>
     <!- Fin Menú Lateral Desplegable ->
     <div class="animation1">
-      <div class="cont-pizarra">
-        <img src="resources/Assets/pizarra.png" alt="Pizarra" class="pizarra">
-        <span id="lbl">BIENVENIDO PROFESOR</span>
-        <br>
-        <span id="lbl_usr">Nom_USer</span>
+      <div class="box">
+        <div class="lightbar"></div>
+        <div class="topLayer"></div>
+        <% if(login) { %>
+          <h2 id="TextW">Bienvenido <%= name %></h2>
+          <% } %>
       </div>
     </div>
     <div class="animation2">
