--- a/views/student_home.ejs
+++ b/views/student_home.ejs
@@ -78,12 +78,12 @@ DOCTYPE html>
       <!- ITEMS ->
       <div id="menu-items">
         <div class="item">
-          <a href="#ShSec1">
+          <a href="#ShSec1" id="Btn#1">
             <div class="icon first-icon">
               <img src="resources/Assets/matters.png" alt="Materias">
             </div>
             <div class="title">
-              <span>Libreta</span>
+              <span>Calificaciones</span>
             </div>
           </a>
         </div>
@@ -96,7 +96,7 @@ DOCTYPE html>
               <img src="resources/Assets/matters.png" alt="">
             </div>
             <div class="title">
-              <span>Calificaciones</span>
+              <span>Materias</span>
             </div>
           </a>
         </div>
@@ -143,7 +143,7 @@ DOCTYPE html>
     
     <section id="ShSec1" class="ShSec1">
       <div class="animation2">
-        <table>
+        <table id="table">
           <thead>
             <tr>
               <td>Materias</td>
