--- a/views/student_home.ejs
+++ b/views/student_home.ejs
@@ -288,7 +288,9 @@ DOCTYPE html>
       </div>
     </section>
 
-    <section id="ShSec2" class="ShSec2"></section>
+    <section id="ShSec2" class="ShSec2">
+      <h5>Uwu</h5>
+    </section>
     <section id="ShSec3" class="ShSec3"></section>
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js">
